--- a/test/fixtures/workflow_tables.yml
+++ b/test/fixtures/workflow_tables.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  workflow_d: 1
+  workflow_id: 1
   auxiliary_table_id: 1
   rank: 1
 
 two:
-  workflow_d: 1
+  workflow_id: 1
   auxiliary_table_id: 1
   rank: 1
